--- a/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/04.md
+++ b/laxaNam/prastutiH/vishvanAtha-sAhitya-darpaNaH/04.md
@@ -504,9 +504,38 @@ title = "०४"
 </details>
 
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तत्र क्रमेण यथा--  
+
+दृष्टिं हे प्रतिवेशिनि ! क्षणम् इहाप्य् अस्मद्-गृहे **दास्यसि**  
+प्रायेणास्य शिशोः पिता **न** विरसाः कौपीर् अपः **पास्यति** ।  
+एकाकिन्य् अपि **यामि** सत्वरम् इतः स्रोतस् तमालाकुलं  
+नीरन्ध्राः तनुम् आलिखन्तु जरठ-च्छेदानल-ग्रन्थयः ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+तत्र क्रमेण यथा--  
+
 दृष्टिं हे प्रतिवेशिनि ! क्षणमिहाप्यस्मद्गृहे दास्यसि प्रायेणास्य शिशोः पिता न विरसाः कौपीरपः पास्यति ।  
 एकाकिन्यपि यामि सत्वरमितः स्त्रोतस्तमालाकुलं नीरन्ध्राः तनुमालिखन्तु जरठच्छेदानलग्रन्थयः ॥
+</details>
+
+<details><summary>English</summary>
+
+hey neighbour,  
+keep an eye on my house for a bit?  
+my husband hates  
+the hard water of our well
+
+I'll quickly pop down  
+to the river bank  
+bristling with reeds  
+that will scratch me all over  
+but I don't mind
+</details>
+
 
 <details><summary>टीका</summary>
 
@@ -524,7 +553,8 @@ title = "०४"
 </details>
 
 
-अत्र स्वतः सम्भविना वस्तुना तत् प्रतिपादिकाया भावपरपुषोपयोगजनखक्षतादिगोपनरूपं वस्तुमात्रं व्यज्यते ।
+अत्र स्वतः सम्भविना वस्तुना  
+तत् प्रतिपादिकाया भाव-परपुरुषोपयोगजनखक्षतादिगोपनरूपं वस्तुमात्रं व्यज्यते ।
 
 <details><summary>टीका</summary>
 
