--- a/laxyam/padyam/shrIvaiShNava-kRtam/parAshara-bhaTTaH/rangarAja-stavaH/aNNangarAchAryaH/2.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/parAshara-bhaTTaH/rangarAja-stavaH/aNNangarAchAryaH/2.md
@@ -2450,9 +2450,7 @@ t।
 रगवचनरन्दमागवु मिरुक्कत् तगुदि युण्डु। 
 वैयागरण परिबालैयादलाल् 
 जायस्वप्नात्यल सतुरीयप्रायध्यातृकमवदुपास्यः । स्व:मिनू । ततत्सहपरिवश्वातु वहति चतुर्षा ॥ ४० ॥ 
-स्वामिच् 
-जाक्रत्प्राय 
-वैप्प्ेराय 
+स्वामिच् जाक्रत्प्राय वैप्प्ेराय 
 जाक्रत्स्वट्नात् पलसदुरीय प्राबत्यात्रुक्ामवदुबास्या, । स्वामिन् दत्तत्सहबरिबर्ह : सादुर्व्यूहम् वहसि' सत्ता। 
 श्रीरङ्गारदरे! 
 विऴित्तुक्कॊण्डिरुप्पाऱाम् 
@@ -2478,7 +2476,10 @@ t।
 क्रमम् जाक्रत्प्राय 
 क्रमम्। २। अव्वदिगारियैविड 
 सिऱीदु कुऱैन्द प्रबोदमुडैय अदिगारियिन् क्रमम् स्वप्नप्रायक्रमम्। ३। अवनिऱ्‌काट्टिलुम् सिऱिदु कुऱवान पोदमुडैय अदिगारियिन् क्रमम् अत्यलसरायक्रमम्। ४। मिगवुम् स्वल्बमान पोदमुडैय अदिगारियिन् क्रमम् तुरियप्रायक्मेम्।आगविप्पडि नाल् वगैगॊण्ड अदिगारिगळ् उपासिप्पदऱ्‌कुत् तगुदियाग नाल्वगै रूपङ्गळै नान्गु व्यूहमूर्त्तिगळुम् कॊळ्ळुगिऱार्गळ्। इङ्ङने ऒव्वॊरु मूर्त्तियुम् नान्गु पडिगळैक् कॊण्डाल् आहत्य व्यूहमूर्त्तिगळ् पदिनाऱु ऎण्ड्रदागुम्। इदुवे सादुर्व्यूहम् वहसि सदुर्त्ता ऎन्बदनाल् सॊल्लप्पडुगिऱदु। "कञ् 
-" वासुदेवादि व्यूह- चतुष्टयमपि प्रत्येकं चतुर्षा न्यूझावतिष्ठते । एवमवस्थानं जामदा दिक्रमचतुष्टयविशिष्टाधिकारि चतुष्टयोपासन- सौकर्यायेत्युक्तं भवति । 
+" वासुदेवादि व्यूहचतुष्टयमपि प्रत्येकं चतुर्धा न्यूझावतिष्ठते ।  
+एवमवस्थानं जाग्रदादि-क्रम-चतुष्टय-विशिष्टाधिकारि-चतुष्टयोपासन-सौकर्यायेत्य् उक्तं भवति । 
+
+
 अचिदविशेषितान् प्रलयसीमनि संसारतः करणकलेवरैर्घटयितुं दयमानमनाः । 
 वरद ! निजेच्छयैव परवानकरोः प्रकृतिं महदभिमानभूतकरणावलि कोर किणीम् ॥ ४१ ॥ 
 संसादा काणग।े 
